# SignalSiphon

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  demo.py  demo_ui.py  pyproject.toml
.github/workflows/: ci.yml
signal_hydrator/: __init__.py  exceptions.py
signal_hydrator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
signal_hydrator/adapters/: base.py  graphql.py  rest.py  sql.py
signal_hydrator/langchain/: __init__.py  template.py  tool.py
signal_hydrator/runtime/: dataloader.py
signal_hydrator/templating/: jinja.py
signal_siphon/: exceptions.py
signal_siphon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
signal_siphon/langchain/: template.py  tool.py
signal_siphon/runtime/: dataloader.py  proxy.py
tests/: test_ast.py  test_dataloader.py  test_exceptions.py  test_graphql.py  test_proxy.py  test_rest.py  test_sql.py  test_tool.py
