[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-hydrator"
version = "0.1.0"
description = "A zero-latency, lazy-loading context hydrator for AI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.0.0",
    "graphql-core>=3.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[project.urls]
"Homepage" = "https://github.com/grace/signal-hydrator"
